--- a/day3interactive.qmd
+++ b/day3interactive.qmd
@@ -17,11 +17,33 @@ Create an if else statement for blue whales lengths. Create a variable blue whal
 
 ```{r}
 whale_length_m <- 40 
-if (whale_length_m > 35){
-  return("GIANT")
-} else if (whale_length_m >= 20 & whale_length_m <= 35) {
-  return("MEDIUM")
-} else ( whale_length_m <= 20){
-  return("SMALL")
+
+if (hwale_length_m > 35) {
+  print("giant")
+} else if (whale_length_m >= 20 & whale_length_m <= 35){
+  print("MEDIUM")
+} else (whale_length_m <= 20) {
+  print("small")
 }
+
+```
+
+# Switch statements 
+
+```{r}
+housing_type <- "single"
+switch(housing_type, 
+       "single" = print("400"),
+       "double" = print("750"),
+       "whole" = print("1100"))
+
+
+if (housing_type == "whole") {
+  print("400")
+} else if (housing_type == "double"){
+  print("750")
+} else if (housing_type == "single") {
+  print("400")
+}
+
 ```
