--- a/day3interactive.qmd
+++ b/day3interactive.qmd
@@ -5,6 +5,11 @@ editor: visual
 ---
 
 ```{r}
+library(palmerpenguins)
+library(dplyr)
+```
+
+```{r}
 temperature <- 99
 
 if (temperature > 97) {
@@ -46,4 +51,63 @@ if (housing_type == "whole") {
   print("400")
 }
 
+```
+
+## Write a for loop with a conditional (if) statement that returns the means of all NUMERIC variables in the penguins dataset
+
+-   is.numeric (asks is this thing numeric?
+
+-   mean(vec, na.rm = TRUE)
+
+```{r}
+for (i in seq_along(penguins)){
+  if (is.numeric(penguins[[i]])){
+    penguins_mean <- mean(penguins[[i]], na.rm = TRUE )
+    print(penguins_mean)
+  } 
+}
+
+  
+
+```
+
+Functional programming for easier iterator
+
+use apply() to iterate over rows or columns. MARGIN = 1 (rows), MARGIN = 2 (columns)
+
+```{r}
+apply( X = mtcars, MARGIN = 2, FUN = median)
+
+apply(mtcars, 2, median)
+
+```
+
+# dplyr::across() example
+
+Starter: find the mean flipper length of penguins by species:
+
+```{r}
+penguins %>% 
+  group_by(species, sex, island) %>% 
+  summarize(mean_flipper_length= mean(flipper_length_mm, na.rm = TRUE), sd_flipper_length = sd(flipper_length_mm, na.rm=TRUE), max_body_mass = max(body_mass_g, na.rm = TRUE))
+```
+
+use across in summarize to return means of columns with numeric values
+
+```{r}
+penguins %>% 
+  group_by(species) %>% 
+  summarize(across(where(is.numeric), mean, na.rm=TRUE))
+```
+
+## Detecting a string pattern 
+
+```{r}
+food <- "I love enchiladas"
+str_detect(food, "burritos")
+if (stringr::str_detect(food, "burritos")) {
+  print("yay burritos!")
+} else {
+  print("What about burritos?")
+}
 ```
